<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.3</version>
		<relativePath/>
	</parent>
	<groupId>de.codexbella</groupId>
	<artifactId>to-do-app-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>to-do-app-parent</name>
	<packaging>pom</packaging>
	
	<properties>
		<java.version>17</java.version>
	</properties>
	
	<modules>
		<module>backend</module>
	</modules>
	
</project>
